# hardware_barrier

./: .gitignore  CMakeLists.txt  README.md  sysfs_interface.md
examples/: CMakeLists.txt  list_all_pe_info.c  measure_sync_time.c  sync_1cmg.c
include/: fujitsu_hwb.h
src/: CMakeLists.txt  fujitsu_hpc_ioctl.h  hwblib.c  internal.h
tests/: CMakeLists.txt  check_cleanup.sh  check_sysfs_status.c  multi_process.sh  test_assign_unassign.c  test_assign_unassign_error.c  test_bb_ownership.c  test_call_assign_num_bw_times.c  test_call_init_num_bb_times.c  test_exit_program_without_cleanup.c  test_get_all_pe_info.c  test_get_all_pe_info_error.c  test_get_pe_info.c  test_get_pe_info_error.c  test_illegal_sync.c  test_init_fini.c  test_init_fini_error.c  test_init_offline_cpu_error.c  test_sync_1cmg.c  test_sync_1cmg_error.c  test_sync_all_bb_all_bw.c  test_util.c  util.c  util.h
